--- a/prog-serv-procesos/1trim/ThreadRacing/src/main/resources/com/example/threadracing/hello-view.fxml
+++ b/prog-serv-procesos/1trim/ThreadRacing/src/main/resources/com/example/threadracing/hello-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 
-<VBox spacing="10.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<VBox prefHeight="504.0" prefWidth="344.0" spacing="10.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.threadracing.Race">
   <children>
     <HBox spacing="10.0">
       <children>
@@ -12,8 +12,8 @@
         <Button fx:id="stopButton" text="Detener" />
       </children>
     </HBox>
-    <Circle fx:id="circle1" fill="#ee1212" radius="5.0" />
-    <Circle fx:id="circle2" fill="#1c98eb" radius="5.0" />
-    <Circle fx:id="circle3" fill="#f5e429" radius="5.0" />
+    <Circle fx:id="circle1" fill="#ee1212" radius="7.0" translateX="8.0" translateY="10.0" />
+    <Circle fx:id="circle2" fill="#1c98eb" radius="7.0" translateX="8.0" translateY="40.0" />
+    <Circle fx:id="circle3" fill="#f5e429" radius="7.0" translateX="8.0" translateY="70.0" />
   </children>
 </VBox>
