--- a/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/colors.xml
+++ b/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#131313</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="rositaPatatita">#77B90EC5</color>
+    <color name="azulon">#FF03A9F4</color>
+    <color name="pinkywinky">#FFC0CB</color>
 </resources>
