--- a/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/themes.xml
+++ b/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Tarea2" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ProyectoConstraints" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/rositaPatatita</item>
     </style>
-
-    <style name="Theme.Tarea2" parent="Base.Theme.Tarea2" />
+    <style name="Theme.Tarea2" parent="Base.Theme.ProyectoConstraints" />
 </resources>
