--- a/prog-multi-dispmoviles/Tarea2/app/src/main/res/layout/activity_main.xml
+++ b/prog-multi-dispmoviles/Tarea2/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,13 @@
         android:layout_height="wrap_content"
         android:hint="@string/telefono_hint" />
 
+
+    <EditText
+        android:id="@+id/etdni"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/dni" />
+
     <!-- Contenedor horizontal para los botones de aceptar y cancelar -->
     <LinearLayout
         android:layout_width="match_parent"
