--- a/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/themes.xml
+++ b/prog-multi-dispmoviles/Tarea2/app/src/main/res/values/themes.xml
@@ -1,8 +1,32 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ProyectoConstraints" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.Tarea2" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/rositaPatatita</item>
     </style>
-    <style name="Theme.Tarea2" parent="Base.Theme.ProyectoConstraints" />
+
+
+    <style name="estiloGeneral">
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:ems">15</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+
+    <style name="estilo1" parent="estiloGeneral">
+        <item name="android:backgroundTint">@color/azulon</item>
+    </style>
+
+    <style name="estilo2" parent="estiloGeneral">
+        <item name="android:backgroundTint">@color/rositaPatatita</item>
+    </style>
+
+
+    <style name="Theme.ProyectoConstraints" parent="Base.Theme.ProyectoConstraints" />
+
 </resources>
