--- a/prog-multi-dispmoviles/MyApplication2/app/src/main/res/values/colors.xml
+++ b/prog-multi-dispmoviles/MyApplication2/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/values/colors.xml -->
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="color_negro">#000000</color>
+    <color name="color_rojo">#A80A0A</color>
+    <color name="color_azul">#0A8ADF</color>
 </resources>
