--- a/prog-multi-dispmoviles/MyApplication2/app/src/main/res/values/themes.xml
+++ b/prog-multi-dispmoviles/MyApplication2/app/src/main/res/values/themes.xml
@@ -1,8 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <style name="BotonEstilo">
+            <item name="android:layout_width">0dp</item>
+            <item name="android:layout_height">0dp</item>
+            <item name="android:layout_columnWeight">1</item>
+            <item name="android:layout_rowWeight">1</item>
+            <item name="android:radius">0dp</item>
+        </style>
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
