--- a/prog-multi-dispmoviles/MyApplication2/app/src/main/res/values/themes.xml
+++ b/prog-multi-dispmoviles/MyApplication2/app/src/main/res/values/themes.xml
@@ -1,13 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MyApplication" parent="Theme.Material3.DayNight.NoActionBar">
-        <style name="BotonEstilo">
-            <item name="android:layout_width">0dp</item>
-            <item name="android:layout_height">0dp</item>
-            <item name="android:layout_columnWeight">1</item>
-            <item name="android:layout_rowWeight">1</item>
-            <item name="android:radius">0dp</item>
-        </style>
+    </style>
+
+    <!-- Estilo para los botones -->
+    <style name="BotonEstilo">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_columnWeight">1</item>
+        <item name="android:layout_rowWeight">1</item>
+        <item name="android:radius">0dp</item>
     </style>
 
     <style name="Theme.MyApplication" parent="Base.Theme.MyApplication" />
