--- a/prog-multi-dispmoviles/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/prog-multi-dispmoviles/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,20 @@
-<!-- activity_main.xml -->
+
+    <!-- activity_main.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
+
 <GridLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/gridLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
     android:columnCount="3"
     android:rowCount="3"
-    android:layout_margin="88dp"
+    android:layout_margin="99dp"
     tools:context=".MainActivity">
 
     <Button
@@ -17,76 +24,105 @@
         android:layout_rowWeight="1"
         android:layout_columnSpan="3"
         android:layout_columnWeight="1"
-        android:onClick="onClickReiniciarContadores"
         android:backgroundTint="@color/color_azul"
         android:text="@string/reiniciar" />
 
-    <Button
+
+    <ImageButton
+
         android:id="@+id/botonNegro"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_negro"
-        android:onClick="onClickBotonNegro" />
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp" />
 
-    <Button
+
+    <ImageButton
+
         android:id="@+id/botonRojo"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_rojo"
-        android:onClick="onClickBotonRojo"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
+
         />
 
-    <Button
+    <ImageButton
+
         android:id="@+id/botonNegro"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_negro"
-        android:onClick="onClickBotonNegro"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
 
         />
 
-    <Button
+    <ImageButton
+
         android:id="@+id/botonRojo"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_rojo"
-        android:onClick="onClickBotonRojo"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
 
         />
 
-    <Button
+    <ImageButton
+
         android:id="@+id/botonNegro"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_negro"
-        android:onClick="onClickBotonNegro"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
 
         />
 
-    <Button
+    <ImageButton
+
         android:id="@+id/botonRojo"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_rojo"
-        android:onClick="onClickBotonRojo"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
 
         />
 
-    <Button
+    <ImageButton
         android:id="@+id/botonNegro"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_negro"
-        android:onClick="onClickBotonNegro"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
         />
 
-    <Button
+    <ImageButton
+
         android:id="@+id/botonRojo"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_rojo"
-        android:onClick="onClickBotonRojo"
-
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
         />
 
-    <Button
+    <ImageButton
+
         android:id="@+id/botonNegro"
         style="@style/BotonEstilo"
-        android:backgroundTint="@color/color_negro"
-        android:onClick="onClickBotonNegro"
+        android:background="@mipmap/p"
+        app:cornerRadius="0dp"
+
 
         />
-
 </GridLayout>
+
+<!-- TextView fuera del GridLayout -->
+    <TextView
+        android:id="@+id/mensajeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Mensaje"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+</LinearLayout>
