--- a/prog-multi-dispmoviles/2trim/app/src/main/res/layout/activity_main.xml
+++ b/prog-multi-dispmoviles/2trim/app/src/main/res/layout/activity_main.xml
@@ -11,140 +11,150 @@
 
 
     <EditText
-        style="@style/calculator_edittext"
+        android:background="@color/button_edit_text"
         android:id="@+id/editText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginBottom="16dp"
         android:inputType="none"
-        android:textSize="24sp"
+        android:textSize="35sp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
         android:gravity="right"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:theme="@style/Base.Theme.Calculadora" />
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+      />
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="8dp"
-        android:rowCount="6"
-        android:columnCount="4">
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/editText"
+            android:layout_marginTop="8dp"
+            android:rowCount="6"
+            android:columnCount="4">
 
-        <!-- Fila 1 -->
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="7"
-            android:onClick="onButtonClick" />
+            <!-- Fila 1 -->
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="7"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="8"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="8"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="9"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="9"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="/"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="/"
+                android:onClick="onButtonClick" />
 
-        <!-- Fila 2 -->
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="4"
-            android:onClick="onButtonClick" />
+            <!-- Fila 2 -->
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="4"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="5"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="5"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="6"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="6"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="*"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="*"
+                android:onClick="onButtonClick" />
 
-        <!-- Fila 3 -->
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="1"
-            android:onClick="onButtonClick" />
+            <!-- Fila 3 -->
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="1"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="2"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="2"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="3"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="3"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="-"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="-"
+                android:onClick="onButtonClick" />
 
-        <!-- Fila 4 -->
-        <Button
-            style="@style/CalculatorButtonNumeric"
-            android:text="0"
-            android:onClick="onButtonClick" />
+            <!-- Fila 4 -->
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="."
-            android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="DEL"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="."
+                android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNumeric"
+                android:text="0"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="+"
-            android:onClick="onButtonClick" />
 
-        <!-- Fila 5 -->
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="("
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="^"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text=")"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="+"
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="^"
-            android:onClick="onButtonClick" />
+            <!-- Fila 5 -->
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text="("
+                android:onClick="onButtonClick" />
 
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="C"
-            android:onClick="onButtonClick" />
+            <Button
+                style="@style/CalculatorButtonNonNumeric"
+                android:text=")"
+                android:onClick="onButtonClick" />
 
-        <!-- Fila 6 -->
-        <Button
-            style="@style/CalculatorButtonNonNumeric"
-            android:text="="
-            android:onClick="onButtonClick" />
 
-    </GridLayout>
+            <Button
+                style="@style/CalculatorDelButton"
+                android:text="DEL"
+                android:onClick="onButtonClick" />
+
+            <Button
+                style="@style/CalculatorDelButton"
+                android:text="C"
+                android:onClick="onButtonClick" />
+
+            <Button
+                style="@style/CalculatorResolveButton"
+                android:layout_width="287dp"
+                android:layout_height="77dp"
+                android:layout_column="0"
+                android:layout_columnSpan="4"
+                android:onClick="onButtonClick"
+                android:layout_marginLeft="50dp"
+                android:text="=" />
+
+            <!-- Fila 6 -->
+
+
+        </GridLayout>
 
 
 </RelativeLayout>
