--- a/prog-multi-dispmoviles/2trim/app/src/main/res/values/colors.xml
+++ b/prog-multi-dispmoviles/2trim/app/src/main/res/values/colors.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Color del texto de los botones de la calculadora -->
     <color name="calculator_button_text">#FFFFFF</color>
@@ -8,6 +7,12 @@
 
     <!-- Color de fondo para los botones no numéricos (verdes) -->
     <color name="button_background_green">#4CAF50</color>
-    <color name="button_edit_text">#CCC5C5</color>
+    <color name="button_edit_text">#B3A7A7</color>
+    <color name="button_resolve">#4D9C15</color>
+    <color name="strokeColor">#333333</color>
+    <color name="delColor">#ED5A3E</color>
+
+
+
 
 </resources>
