--- a/prog-multi-dispmoviles/2trim/app/src/main/res/values/themes.xml
+++ b/prog-multi-dispmoviles/2trim/app/src/main/res/values/themes.xml
@@ -1,18 +1,20 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Calculadora" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.Calculadora" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Calculadora" />
 
-    <style name="CalculatorButton" parent="Widget.AppCompat.Button">
+    <style name="CalculatorButton">
         <item name="android:layout_width">95dp</item>
         <item name="android:layout_height">95dp</item>
         <item name="android:layout_weight">1</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/calculator_button_text</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="strokeColor">@color/strokeColor</item>
+        <item name="strokeWidth">2dp</item>
     </style>
 
     <style name="CalculatorButtonGreen" parent="CalculatorButton">
@@ -30,13 +32,23 @@
         <!-- Puedes personalizar los estilos adicionales específicos de los botones numéricos aquí -->
     </style>
 
-    <style name="calculator_edittext">
-        <item name="android:backgroundTint">@color/button_edit_text</item>
-    </style>
-
     <!-- Nuevos estilos para botones no numéricos -->
     <style name="CalculatorButtonNonNumeric" parent="CalculatorButtonGreen">
         <!-- Puedes personalizar los estilos adicionales específicos de los botones no numéricos aquí -->
 
+    </style>
+
+    <style name="CalculatorResolveButton" parent="CalculatorButtonNonNumeric">
+        <!-- Puedes personalizar los estilos adicionales específicos de los botones no numéricos aquí -->
+        <item name="android:backgroundTint">@color/button_resolve</item>
+    </style>
+
+    <style name="CalculatorDelButton" parent="CalculatorButtonNonNumeric">
+        <!-- Puedes personalizar los estilos adicionales específicos de los botones no numéricos aquí -->
+        <item name="android:backgroundTint">@color/delColor</item>
+    </style>
+
+    <style name="calculator_edittext">
+        <item name="android:backgroundTint">@color/button_edit_text</item>
     </style>
 </resources>
