--- a/prog-multi-dispmoviles/2trim/MigasPan/app/src/main/res/layout/activity_activity2.xml
+++ b/prog-multi-dispmoviles/2trim/MigasPan/app/src/main/res/layout/activity_activity2.xml
@@ -5,16 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="#000000"
     tools:context=".Activity2">
 
     <TextView
         android:id="@+id/textViewBreadcrumb"
+        android:textColor="#19B6FF"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="#000000"/>
+        android:textSize="20sp"
+        android:layout_height="wrap_content"/>
 
     <Button
+        style="@style/RedButtonWithBorder"
+
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
