--- a/prog-multi-dispmoviles/2trim/MigasPan/app/src/main/res/layout/activity_main.xml
+++ b/prog-multi-dispmoviles/2trim/MigasPan/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:background="#000000"
     tools:context=".MainActivity">
 
     <EditText
@@ -12,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Usuario"
+        android:textColor="#4CAF50"
+        android:textColorHint="#C1C1C1"
         android:inputType="text"/>
 
     <EditText
@@ -20,25 +23,27 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextUsername"
         android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:textColorHint="#C1C1C1"
+
         android:hint="Contraseña"
         android:inputType="textPassword"/>
 
     <Button
+        style="@style/GreenButtonWithBorder"
         android:id="@+id/buttonLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_below="@id/editTextPassword"
-        android:layout_marginTop="16dp"
         android:text="Iniciar Sesión"/>
 
     <TextView
         android:id="@+id/textViewBreadcrumb"
+        android:textSize="20sp"
+        android:textColor="#19B6FF"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonLogin"
-        android:layout_marginTop="16dp"
-        android:text=""
-        android:textColor="#000000"/>
+        android:layout_marginTop="26dp" />
 
     <Button
         android:id="@+id/buttonBack"
