--- a/prog-multi-dispmoviles/2trim/WhatsUpBueno/app/src/main/res/menu/menu.xml
+++ b/prog-multi-dispmoviles/2trim/WhatsUpBueno/app/src/main/res/menu/menu.xml
@@ -8,13 +8,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Ajustes"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:icon="@android:drawable/alert_dark_frame" />
+
 
     <item
         android:id="@+id/item2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Me encanta"
+        android:title="Me gusta"
         app:showAsAction="never" />
     <item
         android:id="@+id/item3"
@@ -22,4 +24,21 @@
         android:layout_height="wrap_content"
         android:title="Me encanta"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/item11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="a"
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_search" />
+
+    <item
+        android:id="@+id/item22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:title="Mg"
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_camera" />
+
 </menu>
